--- a/lib/theme/templates/snippet/foot.html
+++ b/lib/theme/templates/snippet/foot.html
@@ -1,4 +1,4 @@
-<a target="_blank" href="http://lego.oa.com">legojs.io</a> /
+<a target="_blank" href="http://lego.imweb.io">legojs.io</a> /
 <a target="_blank" href="https://github.com/imweb/lego">lego</a> /
 <a target="_blank" href="http://seajs.org">sea.js</a> /
 <a target="_blank" href="{{system.homepage}}">{{system.name}}</a>
